editted: fixed ui gap between canvas and controls, fully responsive!

--- a/src/ui-kit/custom/app.sass
+++ b/src/ui-kit/custom/app.sass
@@ -4,8 +4,8 @@
     align-items: center
     height: 100vh
     width: 100vw
-    grid-ga
     .controls
+        align-self: start
         justify-self: start
         background-color: #FFFF
         height: 30vh
