--- a/src/ui-kit/custom/canvas.sass
+++ b/src/ui-kit/custom/canvas.sass
@@ -6,6 +6,8 @@
   height: 60vh
   width: 80vw
   margin: 10px 0px 0px 0px
+  align-self: end
+  justify-self: end
 
   box-shadow: 0px -19px 16px 0 rgba(0,0,0,.5)
   border-radius: 10px 10px 0px 0px
